# tititplayer

./: .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml
src/tititplayer/: __init__.py  cli.py  config.py  daemon.py
src/tititplayer/api/: __init__.py  app.py  playback.py  playlists.py  queue.py  schemas.py  status.py  tracks.py
src/tititplayer/core/: __init__.py  queue.py  state.py
src/tititplayer/db/: __init__.py  manager.py  schema.sql
src/tititplayer/mpv/: __init__.py  client.py
src/tititplayer/tui/: __init__.py  app.py  client.py  dialogs.py  widgets.py
src/tititplayer/utils/: __init__.py  m3u.py  ytdlp.py
tests/: test_api.py  test_core.py  test_db_manager.py  test_mpv_client.py  test_tui_client.py
