[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tititplayer"
version = "0.1.0"
description = "Modern async terminal music player with client-server architecture"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Bani Baskara", email = "banibaskara@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aiosqlite>=0.20",
    "aiohttp>=3.9",
    "fastapi>=0.115",
    "uvicorn>=0.30",  # no [standard] - avoids uvloop, watchfiles (Termux incompatible)
    "click>=8.1",
    "textual>=0.47",
    "pydantic>=2.9",
    "rich>=13.7",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    # ruff is installed system-wide via: pkg install ruff
    "mypy>=1.11",
]

[project.scripts]
titit = "tititplayer.cli:main"
titit-daemon = "tititplayer.daemon:main"

[project.urls]
Homepage = "https://github.com/icedeyes12/tititplayer"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
